  fermionic tensor, tensor with parity symmetry.
+ *TAT.py*: Add python binding for =clear_fermi_symmetry=.
+ *tetragono*: Check whether the state is =None= when dump the state to file to avoid overwriting file by mistake.
*** Changed
+ *tetragono*: =new_dimension= in simple update will be intepreted as the threshold of singular value when it is float.
*** Deprecated
*** Removed
*** Fixed
+ *tetragono*: Fix a bug in merging physical edges during simple update. When the hamiltonian on single site with a
  large dimension is operated, the dead loop would occur previously.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.3...v0.3.4][v0.3.5]] - 2023-04-01

*** Added
+ *tetragono*: Add common used tensors for parity symmetry and some related tensor in Hubbard model with parity
  symmetry.
+ *scalapack.py*: Add documents for scalapack.py.
+ *tetraku*: Add tV model.
+ *tetragono* Add =numpy_hamiltonian= in tetragono shell to export the Hamiltonian of a model to a file in numpy array
  format.
*** Changed
+ *tetraku*: Density matrix of Heisenberg/tJ/Hubbard model are renamed to =gibbs_*= from =density_matrix_*=.
+ *tetragono*: Simple update will check to avoid merge physical edges into a single edge with very large dimension. It
  will only merge edges if the result edge has the dimension less equal to the =threshold=, which is =6= by default.
+ *tetragono*: Use better method to estimate the variance of measurement results observed by the sampling method.
+ *tetragono*: Tetragono shell will not refresh the corresponding configuration when creating or loading ap or gm state.
  Since sometimes user may want to share the configuration between states.
+ *tetragono*: Use pseudo inverse directly in conjugate gradient method.
+ *TAT.py*: Use mt19937(64 bit) as the random generator instead of c++ default random generator which may be different
  on different platforms.
*** Removed